<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:orientation="vertical" >

    <TextView
        android:layout_width="match_parent"
        android:layout_height="55dip"
        android:background="@color/camera_tab_blue"
        android:gravity="center"
        android:text="@string/more"
        android:textColor="#FFFFFFFF"
        android:textSize="23sp" />

    <FrameLayout
        android:id="@+id/account"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_vertical"
        android:background="@drawable/list_item_bg_normal">

        <ImageButton
            android:id="@+id/imageButton2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="#00000000"
            android:src="@mipmap/image_manager" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="40dip"
            android:layout_gravity="center_vertical"
            android:text="@string/account"
            android:textColor="#FF000000"
            android:textSize="18sp" />
        <ImageView
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:layout_gravity="right|center_vertical"
	        android:layout_marginRight="5dip"
	        android:src="@drawable/selector_forward" />
    </FrameLayout>

    <!--  <FrameLayout
		android:id="@+id/fl_push_alarm"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dip"
        android:layout_marginRight="10dip"
        android:background="@drawable/list_item_bg_middle"
        android:clickable="true"
        android:focusable="true" >

        <ImageButton
            android:id="@+id/image_push_alarm"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="#00000000"
            android:src="@drawable/image_push" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="40dip"
            android:layout_gravity="center_vertical"
            android:text="@string/push_push"
            android:textColor="#FF000000"
            android:textSize="18sp" />
        <ImageView
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:layout_gravity="right|center_vertical"
	        android:layout_marginRight="5dip"
	        android:src="@drawable/selector_forward" />
    </FrameLayout>-->

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dip"
        android:background="@drawable/list_item_bg_normal"
        android:clickable="true"
        android:focusable="true" >

        <ImageButton
            android:id="@+id/imageButton4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="#00000000"
            android:src="@mipmap/image_about" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:text="@string/about"
            android:layout_marginLeft="40dip"
            android:textColor="#FF000000"
            android:textSize="18sp" />
    </FrameLayout>

    <Button
        android:id="@+id/exit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dip"
        android:layout_marginTop="50dip"
        android:paddingTop="15dip"
        android:paddingBottom="15dip"
        android:background="@drawable/logout_btn_selector"
        android:text="@string/exit"
        android:textColor="#FFFFFFFF"
        android:textSize="18sp" />

</LinearLayout>